--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
 @import url("navbar.css");
 @import url("header.css");
 @import url("explore-section.css");
+@import url("visits-section.css");
+@import url("reserve-section.css");
+@import url("footer.css");
+
 * {
     margin: 0;
     padding: 0;
 }
 body {
     background-color: rgb(250, 250, 250);
-    height: 3000px;
 }
