--- a/reserve-section.css
+++ b/reserve-section.css
@@ -65,7 +65,7 @@
     transition-duration: 0.5s;
 }
 
-.circle-animation-in {
+/* .circle-animation-in {
     transition-timing-function: ease-out;
     opacity: 0.5;
     transition-duration: 0.5s;
@@ -75,4 +75,17 @@
     opacity: 1 !important;
     transition-timing-function: ease-out;
     transition-duration: 0.5s;
+}
+ */
+
+.circles-in {
+    left: 500px;
+    top: 80px;
+    opacity: 1 !important;
+    transition: 0.4s ease-in-out;
+}
+
+.circles-out {
+    transform: translate(0,0);
+    transition: 0.2s ease-in-out;
 }
