--- a/reserve-section.css
+++ b/reserve-section.css
@@ -7,6 +7,7 @@
 
 .reserve-section .main-window-visits {
     background-image: url("img/reserve-section.png");
+    background-size: 120%;
     width: 100%;
     height: 1000px;
     display: flex;
@@ -20,6 +21,7 @@
     font-weight: 300;
     font-size: 64px;
     opacity: 0.5;
+    padding: 100px;
 }
 
 .reserve-section .main-window-visits .title-visits h2:hover {
@@ -65,22 +67,9 @@
     transition-duration: 0.5s;
 }
 
-/* .circle-animation-in {
-    transition-timing-function: ease-out;
-    opacity: 0.5;
-    transition-duration: 0.5s;
-}
-.circle-animation-out {
-    text-shadow: 0 0 15px #fff;
-    opacity: 1 !important;
-    transition-timing-function: ease-out;
-    transition-duration: 0.5s;
-}
- */
-
 .circles-in {
     left: 500px;
-    top: 80px;
+    transform: translateX(0);
     opacity: 1 !important;
     transition: 0.4s ease-in-out;
 }
@@ -88,4 +77,14 @@
 .circles-out {
     transform: translate(0,0);
     transition: 0.2s ease-in-out;
+}
+
+.bg-zoom-in {
+    background-size: 100% !important;
+    transition: 1s;
+}
+
+.bg-zoom-out {
+    background-size: 120% !important;
+    transition: 1s;
 }
