--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,15 @@
     margin: 0;
     padding: 0;
 }
+*::selection {
+    background-color: rgb(0, 0, 0);
+}
 body {
     background-color: rgb(250, 250, 250);
+    opacity: 0;
+}
+
+.start-page-anim {
+    opacity: 1;
+    transition: 2s;
 }
