--- a/reserve-section.css
+++ b/reserve-section.css
@@ -14,7 +14,9 @@
     justify-content: center;
     align-items: center;
 }
-
+.reserve-section .main-window-visits .title-visits a {
+    text-decoration: none;
+}
 .reserve-section .main-window-visits .title-visits h2 {
     color: #fff;
     font-family: 'Lato';
