--- a/reserve/form.css
+++ b/reserve/form.css
@@ -1,4 +1,4 @@
-.form-reserve form {
+form .form-reserve {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,7 +7,7 @@
     gap: 45px;
 }
 
-.form-reserve form input {
+form .form-reserve input {
     background-color: transparent;
     color: #000;
     outline: none;
@@ -18,7 +18,7 @@
     border-bottom: 1px solid #000;
 }
 
-.form-reserve form select {
+form .form-reserve select {
     background-color: transparent;
     color: #000;
     outline: none;
@@ -29,7 +29,7 @@
     border-bottom: 1px solid #000;
 }
 
-.form-reserve form select option {
+form .form-reserve select option {
     background-color: #000;
     color: #fff;
     font-family: 'Open Sans';
